# Awesome-CV

./: .editorconfig  .envrc  .gitignore  .travis.yml  .yamllint.yaml  .~lock.kasrin_res_cgpt.docx#  BUILD.bazel  Cv  Dockerfile  LICENSE  LICENSE.md  LinkedIn_Profile_Content.md  Makefile  README.md  WORKSPACE.bazel  awesome-cv.cls  awesome-cv.cls.backup  build-cv.sh  circle.yml  coverletter.tex  coverletter_NCC.tex  cv-blx.bib  cv.cls  cv.code-workspace  cv.fdb_latexmk  cv.tex  flake.nix  fontawesome.sty  fontawesome5.sty  fontawesome6.sty  generate_cv_with_docker.sh  install.sh  jafar_cv.tex  kasrin-resume.docx  kasrin_res_cgpt.docx  kasrin_resume.tex  moderncvcolorancient.sty  moderncvcolorelegant.sty  moderncvstyleancient.sty  moderncvstyleelegant.sty  (+4 more)
#old-resume-design/: .gitignore  body.tex  kasrin-resume.tex  publications.bib
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labels.yaml
Nicks_Resume/: resume.tex
andreas/: 2022-12-11-Lebenslauf-Andreas-Kiener.tex  2022-12-12-Andreas-Kiener-Anschreiben.tex  2022-12-12-Anschreiben-Andreas-Kiener.tex  coverletter.tex  resume.fdb_latexmk  resume.tex  resume.xdv
auto/: awesome-cv.el
contents/: awesome-cv.cls  coverletter.tex  cv.tex
cv/: activities.tex  awards.tex  conferences.tex  education.tex  experience.tex  extracurricular.tex  honors.tex  outreach.tex  publications.tex  references.bib  references.tex  research.tex  skills.tex  software.tex  teaching.tex  thesis.tex  writing.tex
documents/: coverletter.tex  resume-frontend.tex  resume-fullstack.tex
examples/: README.md  academicons.sty  ak_cv.tex  ak_resume.tex  awesome-cv.cls  awesome-cv.cls-20240521  compile.sh  compile_coverletter.sh  compile_cv.sh  coverletter.fdb_latexmk  coverletter.tex  coverletter.tex.backup  coverletter.xdv  cv.bcf  cv.fdb_latexmk  cv.tex  cv.xdv  cv_twocol.tex  fontawesome.sty  fontawesome5.sty  fontawesome6.sty  resume-photoid-circle-noedge.tex  resume-photoid-rect-noedge.tex  resume-photoid-rect.tex  resume-twocolumn.tex  resume-zh.tex  resume.tex  resume.tex.orig  resume_anon.tex  resume_ic.tex  tuacademicons.fd
fonts/: guardian.wotf.base64
latex/: fonts  (+1 more)
latex-fontawesome5/: .gitignore  README.md  (+1 more)
(+258 files in other folders)
